--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<ul class="nav">
+  					<li class="active">
+  						<a href="#" class="brand">Treebook</a>
+  					</li>	
+  						<li><%= link_to "All Statuses", statuses_path %></li>
+  						<li><a href="#">Link</a></li>
+  						<li><a href="#">Link</a></li>
+  				</ul>		
+			</div>
+		</div>
+	</div>
+			<div class="container">
+		<%= yield %>
+	</div>
 </body>
 </html>
