--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,21 @@
   					<li class="active">
   						<a href="#" class="brand">Treebook</a>
   					</li>	
+            
+            <ul class="nav"></ul>
   						<li><%= link_to "All Statuses", statuses_path %></li>
-  						<li><a href="#">Link</a></li>
-  						<li><a href="#">Link</a></li>
+            </ul>
+
+                <ul class="nav pull-right">
+          <% if user_signed_in? %>
+            <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+            <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %><li>
+          <% else %>
+            <li><%= link_to "Register", new_user_registration_path %></li>
+            <li><%= link_to "Log in", new_user_session_path %></li>
+          <% end %>
+                    </ul> 
+
   				</ul>		
 			</div>
 		</div>
