--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name</b>
-  <%= @status.user.first_name %>
+  <b><%= @status.user.full_name %></b>
+  
 </p>
 
 <p>
