--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,12 @@
-<h2>Sign up</h2>
+<div class="row">
+<div class="span4">
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: "well"}) do |f| %>
   <%= devise_error_messages! %>
 
+<fieldset>
+
+<legend><b>Register</b></legend>
   <div><%= f.label :first_name %>
   	<%= f.text_field :first_name %></div>
 
@@ -22,6 +26,11 @@
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.submit "Sign up" %></div>
+
+</fieldset>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
