--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class="navbar navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<ul class="nav">
-  					<li class="active">
-  						<a href="#" class="brand">Treebook</a>
-  					</li>	
-            
-            <ul class="nav"></ul>
-  						<li><%= link_to "All Statuses", statuses_path %></li>
-            </ul>
-
-                <ul class="nav pull-right">
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a href="#" class="brand"> Treebook</a>
+        <ul class="nav">
+          <li><%= link_to "All Statuses", statuses_path %></li>
+        </ul>
+        <ul class="nav pull-right">
           <% if user_signed_in? %>
             <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
             <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %><li>
@@ -27,18 +22,20 @@
             <li><%= link_to "Register", new_user_registration_path %></li>
             <li><%= link_to "Log in", new_user_session_path %></li>
           <% end %>
-                    </ul> 
 
-  				</ul>		
-			</div>
-		</div>
-	</div>
-			<div class="container">
-
-         <p class="notice"><%= notice %></p>
-         <p class="alert"><%= alert %></p>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <% flash.each do |type, message| %>
+        <div class="alert <%= flash_class type %>">
+          <button class="close" data-dismiss="alert">x</button>
+            <%= message %>
+        </div>
+        <% end %>
 
     <%= yield %>
-	</div>
+  </div>
 </body>
 </html>
