--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -6,6 +6,12 @@
 
 <% @statuses.each do |status| %>
 <div class="status">
+	<div class="row">
+  <div class="span1">
+  	<% image_tag status.user.gravatar_url %>
+  </div>
+
+  <div class="span7">	
 <strong><%= status.user.full_name %></strong>
 <p><%= status.content %></p>
 <div class"meta">
@@ -13,7 +19,9 @@
   <span class="admin">
     | <%= link_to "Edit", edit_status_path(status) %>
     | <%= link_to "Delete", status, method: :delete, data: { confirm: "Are you sure to want to delete the status="} %>
-  </span>  
+  </span>
+  </div>  
+ </div>
 </div>
 </div>
 <% end %>
