--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-<h1>All of the Statuses</h1>
+<h1>Alle Statuseinträge</h1>
 </div>
 
 <%= link_to "Post a new Status", new_status_path, class: "btn btn-success" %>
@@ -10,7 +10,7 @@
   <div class="span1">
   	<% image_tag status.user.gravatar_url %>
   </div>
-
+ 
   <div class="span7">	
 <strong><%= status.user.full_name %></strong>
 <p><%= status.content %></p>
