--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -8,7 +8,7 @@
 <div class="status">
 	<div class="row">
   <div class="span1">
-  	<% image_tag status.user.gravatar_url %>
+   	<%= image_tag status.user.gravatar_url %>
   </div>
  
   <div class="span7">	
